[tool.poetry]
name = "typer-help-test"
version = "0.1.0"
description = ""
authors = ["Dan Yeaw <dan@yeaw.me>"]
readme = "README.md"
packages = [{include = "typer_help_test"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
