[tool.poetry]
name = "typer-help-test"
version = "0.1.0"
description = ""
authors = ["Dan Yeaw <dan@yeaw.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
click = "^8.1.3"
rich-click = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
